src_old_backup/driver/ajinextek/AXL(Library)/C, C++/AXC.h


    DWORD __stdcall AxcInfoIsCNTModule(DWORD *upStatus);
    DWORD __stdcall AxcInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
    DWORD __stdcall AxcInfoGetModuleCount(long *lpModuleCount);
    DWORD __stdcall AxcInfoGetChannelCount(long lModuleNo, long *lpCount);
    DWORD __stdcall AxcInfoGetTotalChannelCount(long *lpChannelCount);
    DWORD __stdcall AxcInfoGetModule(long lModuleNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
    DWORD __stdcall AxcInfoGetModuleStatus(long lModuleNo);
    DWORD __stdcall AxcInfoGetFirstChannelNoOfModuleNo(long lModuleNo, long *lpChannelNo);
	DWORD __stdcall AxcInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
    DWORD __stdcall AxcSignalSetEncInputMethod(long lChannelNo, DWORD dwMethod);
    DWORD __stdcall AxcSignalGetEncInputMethod(long lChannelNo, DWORD* dwpUpMethod);
    DWORD __stdcall AxcTriggerSetFunction(long lChannelNo, DWORD dwMode);
    DWORD __stdcall AxcTriggerGetFunction(long lChannelNo, DWORD* dwpMode);
    DWORD __stdcall AxcTriggerSetNotchEnable(long lChannelNo, DWORD dwUsage);
    DWORD __stdcall AxcTriggerGetNotchEnable(long lChannelNo, DWORD* dwpUsage);
    DWORD __stdcall AxcSignalSetCaptureFunction(long lChannelNo, DWORD dwCapturePol);
    DWORD __stdcall AxcSignalGetCaptureFunction(long lChannelNo, DWORD* dwpCapturePol);
    DWORD __stdcall AxcSignalGetCapturePos(long lChannelNo, double* dbpCapturePos);
    DWORD __stdcall AxcStatusGetActPos(long lChannelNo, double* dbpActPos);
    DWORD __stdcall AxcStatusSetActPos(long lChannelNo, double dbActPos);
    DWORD __stdcall AxcTriggerSetNotchPos(long lChannelNo, double dbLowerPos, double dbUpperPos);
    DWORD __stdcall AxcTriggerGetNotchPos(long lChannelNo, double* dbpLowerPos, double* dbpUpperPos);
    DWORD __stdcall AxcTriggerSetOutput(long lChannelNo, DWORD dwOutVal);
    DWORD __stdcall AxcStatusGetChannel(long lChannelNo, DWORD* dwpChannelStatus);
    DWORD __stdcall AxcMotSetMoveUnitPerPulse(long lChannelNo, double dMoveUnitPerPulse);
    DWORD __stdcall AxcMotGetMoveUnitPerPulse(long lChannelNo, double* dpMoveUnitPerPuls);
    DWORD __stdcall AxcSignalSetEncReverse(long lChannelNo, DWORD dwReverse);
    DWORD __stdcall AxcSignalGetEncReverse(long lChannelNo, DWORD* dwpReverse);
    DWORD  __stdcall AxcSignalSetEncSource(long lChannelNo, DWORD dwSource);
    DWORD  __stdcall AxcSignalGetEncSource(long lChannelNo, DWORD* dwpSource);
    DWORD  __stdcall AxcTriggerSetBlockLowerPos(long lChannelNo, double dLowerPosition);
    DWORD  __stdcall AxcTriggerGetBlockLowerPos(long lChannelNo, double* dpLowerPosition);
    DWORD  __stdcall AxcTriggerSetBlockUpperPos(long lChannelNo, double dUpperPosition);
    DWORD  __stdcall AxcTriggerGetBlockUpperPos(long lChannelNo, double* dpUpperrPosition);
    DWORD  __stdcall AxcTriggerSetPosPeriod(long lChannelNo, double dPeriod);
    DWORD  __stdcall AxcTriggerGetPosPeriod(long lChannelNo, double* dpPeriod);
    DWORD  __stdcall AxcTriggerSetDirectionCheck(long lChannelNo, DWORD dwDirection);
    DWORD  __stdcall AxcTriggerGetDirectionCheck(long lChannelNo, DWORD* dwpDirection);
    DWORD  __stdcall AxcTriggerSetBlock(long lChannelNo, double dLower, double dUpper, double dABSod);
    DWORD  __stdcall AxcTriggerGetBlock(long lChannelNo, double *dpLower, double *dpUpper, double *dpABSod);
    DWORD  __stdcall AxcTriggerSetTime(long lChannelNo, double dTrigTime);
    DWORD  __stdcall AxcTriggerGetTime(long lChannelNo, double* dpTrigTime);
    DWORD  __stdcall AxcTriggerSetLevel(long lChannelNo, DWORD dwLevel);
    DWORD  __stdcall AxcTriggerGetLevel(long lChannelNo, DWORD* dwpLevel);
    DWORD  __stdcall AxcTriggerSetFreq(long lChannelNo, DWORD dwFreqency);
    DWORD  __stdcall AxcTriggerGetFreq(long lChannelNo, DWORD* dwpFreqency);
    DWORD  __stdcall AxcSignalWriteOutput(long lChannelNo, DWORD dwOutput);
    DWORD  __stdcall AxcSignalReadOutput(long lChannelNo, DWORD* dwpOutput);
    DWORD  __stdcall AxcSignalWriteOutputBit(long lChannelNo, long lBitNo, DWORD uOnOff);
    DWORD  __stdcall AxcSignalReadOutputBit(long lChannelNo,long lBitNo, DWORD *upOnOff);
    DWORD  __stdcall AxcSignalReadInput(long lChannelNo, DWORD* dwpInput);
    DWORD  __stdcall AxcSignalReadInputBit(long lChannelNo, long lBitNo, DWORD *upOnOff);
    DWORD  __stdcall AxcTriggerSetEnable(long lChannelNo, DWORD dwUsage);
    DWORD  __stdcall AxcTriggerGetEnable(long lChannelNo, DWORD* dwpUsage);
    DWORD  __stdcall AxcTriggerReadAbsRamData(long lChannelNo, DWORD dwAddr, DWORD* dwpData);
    DWORD  __stdcall AxcTriggerWriteAbsRamData(long lChannelNo, DWORD dwAddr, DWORD dwData);
    DWORD  __stdcall AxcTriggerSetAbs(long lChannelNo, DWORD dwTrigNum, DWORD* dwTrigPos, DWORD dwDirection = 0);
    DWORD  __stdcall AxcTriggerSetAbsDouble(long lChannelNo, DWORD dwTrigNum, double* dTrigPos, DWORD dwDirection = 0);
	DWORD __stdcall AxcTriggerSetPwmEnable(long lChannelNo, bool bEnable);
	DWORD __stdcall AxcTriggerGetPwmEnable(long lChannelNo, bool *bEnable);
	DWORD __stdcall AxcTriggerSetPwmOutMode(long lChannelNo, DWORD dwMode);
	DWORD __stdcall AxcTriggerGetPwmOutMode(long lChannelNo, DWORD* dwpMode);
	DWORD __stdcall AxcTriggerSetPwmVelInfo(long lChannelNo, double dMinVel, double dMaxVel, double dVelInterval);
	DWORD __stdcall AxcTriggerGetPwmVelInfo(long lChannelNo, double* dpMinVel, double* dpMaxVel, double* dpVelInterval);
	DWORD __stdcall AxcTriggerSetPwmPulseControl(long lChannelNo, DWORD dwMode);
	DWORD __stdcall AxcTriggerGetPwmPulseControl(long lChannelNo, DWORD *dwpMode);
	DWORD __stdcall AxcTriggerSetPwmManualData(long lChannelNo,double dFrequency, double dData);
	DWORD __stdcall AxcTriggerGetPwmManualData(long lChannelNo,double* dpFrequency, double* dpData);
	DWORD __stdcall AxcTriggerSetPwmPatternData(long lChannelNo, long lDataCnt,  double *dpVel, double *dpFrequency, double *dpData);
	DWORD __stdcall AxcTriggerSetPwmData(long lChannelNo, double dVel, double dFrequency, double dData);
	DWORD __stdcall AxcTriggerGetPwmData(long lChannelNo, double dVel, double *dpFrequency, double *dpData);
	DWORD __stdcall AxcStatusReadActVel(long lChannelNo, double* dpActVel);
	DWORD __stdcall AxcStatusRead2DActVel(long lChannelNo, double* dpActVel);
	DWORD __stdcall AxcStatusSetActPosClear(long lChannelNo);
    DWORD  __stdcall AxcTableSetTriggerLevel(long lModuleNo, long lTablePos, DWORD uLevel);
    DWORD  __stdcall AxcTableGetTriggerLevel(long lModuleNo, long lTablePos, DWORD* upLevel);
	DWORD  __stdcall AxcTableSetTriggerTime(long lModuleNo, long lTablePos, double dTriggerTimeUSec);
    DWORD  __stdcall AxcTableGetTriggerTime(long lModuleNo, long lTablePos, double* dpTriggerTimeUSec);
	DWORD  __stdcall AxcTableSetEncoderInput(long lModuleNo, long lTablePos, DWORD uEncoderInput1, DWORD uEncoderInput2);
	DWORD  __stdcall AxcTableGetEncoderInput(long lModuleNo, long lTablePos, DWORD* upEncoderInput1, DWORD* upEncoderInput2);
	DWORD  __stdcall AxcTableSetTriggerOutport(long lModuleNo, long lTablePos, DWORD uTriggerOutport);
	DWORD  __stdcall AxcTableGetTriggerOutport(long lModuleNo, long lTablePos, DWORD* upTriggerOutport);
	DWORD  __stdcall AxcTableSetErrorRange(long lModuleNo, long lTablePos, double dErrorRange);
	DWORD  __stdcall AxcTableGetErrorRange(long lModuleNo, long lTablePos, double* dpErrorRange);
	DWORD  __stdcall AxcTableTriggerOneShot(long lModuleNo, long lTablePos);
	DWORD  __stdcall AxcTableTriggerPatternShot(long lModuleNo, long lTablePos, long lTriggerCount, DWORD uTriggerFrequency);
	DWORD  __stdcall AxcTableGetPatternShotData(long lModuleNo, long lTablePos, long* lpTriggerCount, DWORD* upTriggerFrequency);
	DWORD  __stdcall AxcTableSetTriggerMode(long lModuleNo, long lTablePos, DWORD uTrigMode);
	DWORD  __stdcall AxcTableGetTriggerMode(long lModuleNo, long lTablePos, DWORD* upTrigMode);
	DWORD  __stdcall AxcTableSetTriggerCountClear(long lModuleNo, long lTablePos);
	DWORD  __stdcall AxcTableSetTriggerData(long lModuleNo, long lTablePos, long lTriggerDataCount, double* dpTriggerData, long* lpTriggerCount, double* dpTriggerInterval);
	DWORD  __stdcall AxcTableGetTriggerData(long lModuleNo, long lTablePos, long* lpTriggerDataCount, double* dpTriggerData, long* lpTriggerCount, double* dpTriggerInterval);
    DWORD  __stdcall AxcTableSetTriggerDataEx(long lModuleNo, long lTablePos, long lTriggerDataCount, DWORD uOption, double* dpTriggerData);
    DWORD  __stdcall AxcTableGetTriggerDataEx(long lModuleNo, long lTablePos, long* lpTriggerDataCount,  DWORD* upOption, double* dpTriggerData);
	DWORD  __stdcall AxcTableSetTriggerDataClear(long lModuleNo, long lTablePos);
	DWORD  __stdcall AxcTableSetEnable(long lModuleNo, long lTablePos, DWORD uEnable);
	DWORD  __stdcall AxcTableGetEnable(long lModuleNo, long lTablePos, DWORD* upEnable);
	DWORD  __stdcall AxcTableReadTriggerCount(long lModuleNo, long lTablePos, long* lpTriggerCount);
	DWORD  __stdcall AxcTableReadFifoStatus(long lModuleNo, long lTablePos, long* lpCount1, DWORD* upStatus1, long* lpCount2, DWORD* upStatus2);
	DWORD  __stdcall AxcTableReadFifoData(long lModuleNo, long lTablePos, double* dpTopData1, double* dpTopData2);