src/driver/ajinextek/AXL(Library)/Delphi/AXC.pas


    dll_name    = 'AXL.dll';
    function AxcInfoIsCNTModule; external dll_name name 'AxcInfoIsCNTModule';
    function AxcInfoGetModuleNo; external dll_name name 'AxcInfoGetModuleNo';
    function AxcInfoGetModuleCount; external dll_name name 'AxcInfoGetModuleCount';
    function AxcInfoGetChannelCount; external dll_name name 'AxcInfoGetChannelCount';
    function AxcInfoGetTotalChannelCount; external dll_name name 'AxcInfoGetTotalChannelCount';
    function AxcInfoGetModule; external dll_name name 'AxcInfoGetModule';
    function AxcInfoGetModuleStatus; external dll_name name 'AxcInfoGetModuleStatus';
    function AxcInfoGetFirstChannelNoOfModuleNo; external dll_name name 'AxcInfoGetFirstChannelNoOfModuleNo';
    function AxcInfoGetModuleNoOfChannelNo; external dll_name name 'AxcInfoGetModuleNoOfChannelNo';
    function AxcSignalSetEncInputMethod; external dll_name name 'AxcSignalSetEncInputMethod';
    function AxcSignalGetEncInputMethod; external dll_name name 'AxcSignalGetEncInputMethod';
    function AxcTriggerSetFunction; external dll_name name 'AxcTriggerSetFunction';
    function AxcTriggerGetFunction; external dll_name name 'AxcTriggerGetFunction';
    function AxcTriggerSetNotchEnable; external dll_name name 'AxcTriggerSetNotchEnable';
    function AxcTriggerGetNotchEnable; external dll_name name 'AxcTriggerGetNotchEnable';
    function AxcSignalSetCaptureFunction; external dll_name name 'AxcSignalSetCaptureFunction';
    function AxcSignalGetCaptureFunction; external dll_name name 'AxcSignalGetCaptureFunction';
    function AxcSignalGetCapturePos; external dll_name name 'AxcSignalGetCapturePos';
    function AxcStatusGetActPos; external dll_name name 'AxcStatusGetActPos';
    function AxcStatusSetActPos; external dll_name name 'AxcStatusSetActPos';
    function AxcTriggerSetNotchPos; external dll_name name 'AxcTriggerSetNotchPos';
    function AxcTriggerGetNotchPos; external dll_name name 'AxcTriggerGetNotchPos';
    function AxcTriggerSetOutput; external dll_name name 'AxcTriggerSetOutput';
    function AxcStatusGetChannel; external dll_name name 'AxcStatusGetChannel';
    function AxcMotSetMoveUnitPerPulse; external dll_name name 'AxcMotSetMoveUnitPerPulse';
    function AxcMotGetMoveUnitPerPulse; external dll_name name 'AxcMotGetMoveUnitPerPulse';
    function AxcSignalSetEncReverse; external dll_name name 'AxcSignalSetEncReverse';
    function AxcSignalGetEncReverse; external dll_name name 'AxcSignalGetEncReverse';
    function AxcSignalSetEncSource; external dll_name name 'AxcSignalSetEncSource';
    function AxcSignalGetEncSource; external dll_name name 'AxcSignalGetEncSource';
    function AxcTriggerSetBlockLowerPos; external dll_name name 'AxcTriggerSetBlockLowerPos';
    function AxcTriggerGetBlockLowerPos; external dll_name name 'AxcTriggerGetBlockLowerPos';
    function AxcTriggerSetBlockUpperPos; external dll_name name 'AxcTriggerSetBlockUpperPos';
    function AxcTriggerGetBlockUpperPos; external dll_name name 'AxcTriggerGetBlockUpperPos';
    function AxcTriggerSetPosPeriod; external dll_name name 'AxcTriggerSetPosPeriod';
    function AxcTriggerGetPosPeriod; external dll_name name 'AxcTriggerGetPosPeriod';
    function AxcTriggerSetDirectionCheck; external dll_name name 'AxcTriggerSetDirectionCheck';
    function AxcTriggerGetDirectionCheck; external dll_name name 'AxcTriggerGetDirectionCheck';
    function AxcTriggerSetBlock; external dll_name name 'AxcTriggerSetBlock';
    function AxcTriggerGetBlock; external dll_name name 'AxcTriggerGetBlock';
    function AxcTriggerSetTime; external dll_name name 'AxcTriggerSetTime';
    function AxcTriggerGetTime; external dll_name name 'AxcTriggerGetTime';
    function AxcTriggerSetLevel; external dll_name name 'AxcTriggerSetLevel';
    function AxcTriggerGetLevel; external dll_name name 'AxcTriggerGetLevel';
    function AxcTriggerSetFreq; external dll_name name 'AxcTriggerSetFreq';
    function AxcTriggerGetFreq; external dll_name name 'AxcTriggerGetFreq';
    function AxcSignalWriteOutput; external dll_name name 'AxcSignalWriteOutput';
    function AxcSignalReadOutput; external dll_name name 'AxcSignalReadOutput';
    function AxcSignalWriteOutputBit; external dll_name name 'AxcSignalWriteOutputBit';
    function AxcSignalReadOutputBit; external dll_name name 'AxcSignalReadOutputBit';
    function AxcSignalReadInput; external dll_name name 'AxcSignalReadInput';
    function AxcSignalReadInputBit; external dll_name name 'AxcSignalReadInputBit';
    function AxcTriggerSetEnable; external dll_name name 'AxcTriggerSetEnable';
    function AxcTriggerGetEnable; external dll_name name 'AxcTriggerGetEnable';
    function AxcTriggerReadAbsRamData; external dll_name name 'AxcTriggerReadAbsRamData';
    function AxcTriggerWriteAbsRamData; external dll_name name 'AxcTriggerWriteAbsRamData';
    function AxcTriggerSetAbs; external dll_name name 'AxcTriggerSetAbs';
    function AxcTriggerSetAbsDouble; external dll_name name 'AxcTriggerSetAbsDouble';
    function AxcTriggerSetPwmEnable; external dll_name name 'AxcTriggerSetPwmEnable';
    function AxcTriggerGetPwmEnable; external dll_name name 'AxcTriggerGetPwmEnable';
    function AxcTriggerSetPwmOutMode; external dll_name name 'AxcTriggerSetPwmOutMode';
    function AxcTriggerGetPwmOutMode; external dll_name name 'AxcTriggerGetPwmOutMode';
    function AxcTriggerSetPwmVelInfo; external dll_name name 'AxcTriggerSetPwmVelInfo';
    function AxcTriggerGetPwmVelInfo; external dll_name name 'AxcTriggerGetPwmVelInfo';
    function AxcTriggerSetPwmPulseControl; external dll_name name 'AxcTriggerSetPwmPulseControl';
    function AxcTriggerGetPwmPulseControl; external dll_name name 'AxcTriggerGetPwmPulseControl';
    function AxcTriggerSetPwmManualData; external dll_name name 'AxcTriggerSetPwmManualData';
    function AxcTriggerGetPwmManualData; external dll_name name 'AxcTriggerGetPwmManualData';
    function AxcTriggerSetPwmPatternData; external dll_name name 'AxcTriggerSetPwmPatternData';
    function AxcTriggerSetPwmData; external dll_name name 'AxcTriggerSetPwmData';
    function AxcTriggerGetPwmData; external dll_name name 'AxcTriggerGetPwmData';
    function AxcStatusReadActVel; external dll_name name 'AxcStatusReadActVel';
    function AxcStatusRead2DActVel; external dll_name name 'AxcStatusRead2DActVel';
    function AxcStatusSetActPosClear; external dll_name name 'AxcStatusSetActPosClear';
    function AxcTableSetTriggerLevel; external dll_name name 'AxcTableSetTriggerLevel';
    function AxcTableGetTriggerLevel; external dll_name name 'AxcTableGetTriggerLevel';
    function AxcTableSetTriggerTime; external dll_name name 'AxcTableSetTriggerTime';
    function AxcTableGetTriggerTime; external dll_name name 'AxcTableGetTriggerTime';
    function AxcTableSetEncoderInput; external dll_name name 'AxcTableSetEncoderInput';
    function AxcTableGetEncoderInput; external dll_name name 'AxcTableGetEncoderInput';
    function AxcTableSetTriggerOutport; external dll_name name 'AxcTableSetTriggerOutport';
    function AxcTableGetTriggerOutport; external dll_name name 'AxcTableGetTriggerOutport';
    function AxcTableSetErrorRange; external dll_name name 'AxcTableSetErrorRange';
    function AxcTableGetErrorRange; external dll_name name 'AxcTableGetErrorRange';
    function AxcTableTriggerOneShot; external dll_name name 'AxcTableTriggerOneShot';
    function AxcTableTriggerPatternShot; external dll_name name 'AxcTableTriggerPatternShot';
    function AxcTableGetPatternShotData; external dll_name name 'AxcTableGetPatternShotData';
    function AxcTableSetTriggerMode; external dll_name name 'AxcTableSetTriggerMode';
    function AxcTableGetTriggerMode; external dll_name name 'AxcTableGetTriggerMode';
    function AxcTableSetTriggerCountClear; external dll_name name 'AxcTableSetTriggerCountClear';
    function AxcTableSetTriggerData; external dll_name name 'AxcTableSetTriggerData';
    function AxcTableGetTriggerData; external dll_name name 'AxcTableGetTriggerData';
    function AxcTableSetTriggerDataEx; external dll_name name 'AxcTableSetTriggerDataEx';
    function AxcTableGetTriggerDataEx; external dll_name name 'AxcTableGetTriggerDataEx';
    function AxcTableSetTriggerDataClear; external dll_name name 'AxcTableSetTriggerDataClear';
    function AxcTableSetEnable; external dll_name name 'AxcTableSetEnable';
    function AxcTableGetEnable; external dll_name name 'AxcTableGetEnable';
    function AxcTableReadTriggerCount; external dll_name name 'AxcTableReadTriggerCount';
    function AxcTableReadFifoStatus; external dll_name name 'AxcTableReadFifoStatus';
    function AxcTableReadFifoData; external dll_name name 'AxcTableReadFifoData';
